--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
       <img
-        src="/originals/firefox_logo400-only_RGB.png"
+        src="../originals/firefox_logo400-only_RGB.png"
         alt="Firefox Logo"
       />
     </header>
@@ -148,34 +148,34 @@
         <a href="https://www.mozilla.org/en-US/firefox/new/">
           <img
             srcset="
-              /originals/firefox_logo120-only_RGB.png 120w,
-              /originals/firefox_logo400-only_RGB.png 400w
+              ../originals/firefox_logo120-only_RGB.png 120w,
+              ../originals/firefox_logo400-only_RGB.png 400w
             "
             sizes="(max-width: 500px) 120px, 400px"
-            src="/originals/firefox_logo400-only_RGB.png"
+            src="../originals/firefox_logo400-only_RGB.png"
             alt="Mozilla Logo"
           />
         </a>
         <a href="https://www.mozilla.org/">
           <img
             srcset="
-            /originals/mozilla-dinosaur120-head.png 120w,
-          /originals/mozilla-dinosaur400-head.png 400w"
+            ../originals/mozilla-dinosaur120-head.png 120w,
+          ../originals/mozilla-dinosaur400-head.png 400w"
             sizes="(max-width: 500px) 120px, 400px"
-            src="/originals/mozilla-dinosaur400-head.png"
+            src="../originals/mozilla-dinosaur400-head.png"
           />
         </a>
         <a href="https://addons.mozilla.org/">
           <img
             srcset="
-            /originals/firefox-addons120.jpg 120w,
-          /originals/firefox-addons.jpg 400w"
+            ../originals/firefox-addons120.jpg 120w,
+          ../originals/firefox-addons.jpg 400w"
             sizes="(max-width: 500px) 120px, 400px"
-            src="/originals/firefox-addons.jpg"
+            src="../originals/firefox-addons.jpg"
           />
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="/originals/mdn.svg" />
+          <img src="../originals/mdn.svg" />
         </a>
         <div class="clearfix"></div>
       </div>
@@ -185,7 +185,7 @@
         <picture>
           <source
             media="(max-width: 600px) "
-            srcset="/originals/red-panda600.jpg"
+            srcset="../originals/red-panda600.jpg"
           />
           <img
             src="/originals/red-panda.jpg"
